2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (drawHorizontalItem): Call addEntity() to handle entity generation,
    (drawVerticalItem): Likewise.

2008-02-14  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1888422 (Rob Van der Sanden):
    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (drawHorizontalItem): Use correct data area dimension for series gap 
    calculation.

2008-01-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/CombinedDomainXYPlot.java
    (draw): Reset fixed range axis space for subplots.

2008-01-18  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/xy/XIntervalSeriesCollection.java
	(removeSeries(int)): New method,
	(removeSeries(XIntervalSeries)): Likewise,
	(removeAllSeries): Likewise,
	* source/org/jfree/data/xy/XYIntervalSeriesCollection.java
	(removeSeries(int)): New method,
	(removeSeries(XYIntervalSeries)): Likewise,
	(removeAllSeries): Likewise,
	* source/org/jfree/data/xy/YIntervalSeriesCollection.java
	(removeSeries(int)): New method,
	(removeSeries(YIntervalSeries)): Likewise,
	(removeAllSeries): Likewise.

2008-01-18  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/data/time/TimeSeriesCollection.java
	(getSeries): Changed argument from String to Comparable.

2008-01-15  David Gilbert  <david.gilbert@object-refinery.com>

	Patch 1866446 (Rob Van der Sanden):
	* source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
	(maximumBarWidth): New field,
	(BoxAndWhiskerRenderer): Initialise new field,
	(getMaximumBarWidth): New method,
	(setMaximumBarWidth): Likewise,
	(equals): Updated for new field,
	* tests/org/jfree/chart/renderer/category/junit/BoxAndWhiskerRendererTests.java
	(testEquals): Updated to check new field.

2008-01-10  David Gilbert  <david.gilbert@object-refinery.com>

	Bug 1864222: